fix pom